# Face-Recognition-Attendance-System

./: pyproject.toml  requirements.txt
facerecognition_attendance_system/: facereg.py
tests/: test_facerecognition_attendance_system.py
