[tool.poetry]
name = "FaceRecognition-Attendance-System"
version = "0.1.0"
description = ""
authors = ["Barham Farraj <barhamfarraj@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
cmake = "^3.22.4"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
